👌 IMPROVE: improvement on the content and information

--- a/index.html
+++ b/index.html
@@ -127,7 +127,17 @@
             <p>
                 I am a co-organizer of the FreeCodeCamp Ibadan Community Meet-up
                 where I have mentored 50+ developers to get started with
-                JavaScript as a language.
+                JavaScript as a language. I spoke at the first edition of
+                <a href="https://twitter.com/JAMstackLagos">
+                    JAM<i>stack</i> meetup lagos</a
+                >
+                recently on the
+                <mark>
+                    <a href="https://understand-jamstack.netlify.com/"
+                        >Understanding JAM<i>stack</i> use-cases with
+                        FreeCodeCamp and Gatsby Swags Store.</a
+                    ></mark
+                >
             </p>
         </div>
         <div class="work-experience">
@@ -141,17 +151,19 @@
                 <article>
                     Working on <a href="https://zeedas.com">Zeedas</a> a project
                     management solution focused on helping software development
-                    lifecycle with project outline and outsourcing. Our Platform
-                    was built with Node and Vue. I work on both the Backend and
-                    front-end side of the project. I also work on some other
-                    client projects mostly the backend using Nodejs.
+                    lifecycle. Our Platform was built with Node and Vue. I work
+                    on both the Backend and wrote documentation of tested API
+                    endpoints. I also work on some other client projects mostly
+                    the backend using Nodejs using
+                    <mark>REST and GRAPHQL</mark>.
                 </article>
                 <h4>
                     <a href="http://www.edulightconsulting.com.ng/"
                         >EDULIGHT CONSULTING</a
                     >
                     – Dugbe, Ibadan, Oyo State. – (March, 2018 – December, 2018)
-                    – Web Development Training Facilitator.
+                    – JavaScript Engineer and Web Development Training
+                    Facilitator.
                 </h4>
                 <article>
                     Built
@@ -160,11 +172,11 @@
                         web development and trained different Bootcamp cohorts.
                         Built prototype used for teaching student.</a
                     >
-                    and solution for small scale businesses. Our focus was
-                    leveraging JavaScript ease to build modern website.
-                    Increased the company’s value and reputation by producing
-                    skilled developers who are intern ready for affiliate
-                    business in need of developers. The organization hosts the
+                    and solution for small scale businesses. Worked as a
+                    <mark>JavaScript Engineer</mark>. Increased the company’s
+                    value and revenue by producing skilled developers and build
+                    software products that meets the modern architecture of
+                    software development. The organization hosts the
                     <a href="http://fcc-ibadan.netlify.com"
                         >Freecodecamp Ibadan</a
                     >
@@ -181,7 +193,7 @@
                     science to students using modern facilities. Teaching and
                     upgrading staff IT experience. I trained Staffs and students
                     on Microsoft Packages and Modern Web Experience and Digital
-                    Relevance.
+                    Relevance.<mark>Introduced Student to writing codes.</mark>
                 </article>
             </section>
 
@@ -193,16 +205,10 @@
                 </h4>
                 <article>
                     As a student ambassador for Jet Brain, I co-organized events
-                    to help expose students to current technologies like Git
-                    using GitHub and Jet Brain Softwares. Led a Team that
-                    organized Jet Brains Student Meet-up, GitHub Student Meet-up
-                    to facilitate software development process using
-                    collaborative effort contribution among young upcoming
-                    developers in the Lautech Community.
-                    <p>
-                        Worked with Raspberry Pi to facilitate computer science
-                        training.
-                    </p>
+                    to help expose students worked with technologies like
+                    <mark>Git using GitHub and Jet Brain Softwares</mark>.
+                    Organized meetup and work as a
+                    <mark>Junior JavaScript Developer</mark>.
                 </article>
             </section>
             <section>
@@ -212,9 +218,9 @@
                 </h4>
                 <article>
                     I worked on a team of interns where we were introduced to
-                    Core .Net technologies using ASP.net. We worked on a
-                    development team that worked on a Transcript Application
-                    software.
+                    Core .Net technologies using <mark>ASP.net and C#</mark>. We
+                    worked on a development team that worked on a Transcript
+                    Application software.
                 </article>
             </section>
         </div>
