🐛 FIX: add sicksfits url and adjust the paging to maitain 2 pages and remove unused script

--- a/index.html
+++ b/index.html
@@ -267,7 +267,18 @@
 					>A Telegram Bot - Word Assistant deployed on Openode</a
 				>
 			</p>
-			<p><a href="#">Sick Fits - **Work in Progress**</a></p>
+			<p>
+				<a href="https://sicksfit-next-production.herokuapp.com/"
+					>Sick Fits - A E-commerce project with React, Nextjs, Stripe
+					for Payment and Downshift.</a
+				>
+			</p>
+			<p>
+				<a href="https://oluwasetemi.dev/"
+					>Personal Blog and Website - A React project based on
+					GatsbyJS
+				</a>
+			</p>
 		</div>
 
 		<div class="education">
@@ -367,6 +378,10 @@
 						Containers
 						<!-- -<progress value="20" max="100">Containers</progress> -->
 					</p>
+					<p class="front-end_item">
+						Kubernetes
+						<!-- -<progress value="20" max="100">Containers</progress> -->
+					</p>
 				</div>
 			</section>
 			<section>
@@ -378,6 +393,10 @@
 					</p>
 					<p class="front-end_longItem">
 						Agile Methodologies
+						<!-- - <progress value="50" max="100">Git</progress> -->
+					</p>
+					<p class="front-end_longItem">
+						Open Source Software
 						<!-- - <progress value="50" max="100">Git</progress> -->
 					</p>
 					<p class="front-end_longItem">
@@ -414,7 +433,5 @@
       <h3>Referees</h3>
       <p>Available on Request</p>
     </!-->
-
-		<script src="https://console.chat/load.js"></script>
 	</body>
 </html>
