📦 NEW: add new information

--- a/index.html
+++ b/index.html
@@ -272,22 +272,26 @@
         <div class="side-projects">
             <h3>Portfolio</h3>
             <p>
-                <a href="https://chooselife-wellness.com"
+                <a href="https://chooselife-staging.netlify.app/"
                     >Choose Life Wellness platform. Frontent - Reactjs and Backend - GraphQL</a
                 >
             </p>
             <p>
-                <a href="https://stores-app-lhinvnequz.now.sh"
-                    >Stores - Built from a tutorial by @wesbos using Node and
-                    JavaScript with MongoDB deployed on Now</a
-                >
+                <a href="https://staging.chooselife-wellness.com/altair/"
+					>GraphQL API for ChooseLife wellness using altair middleware as graphiQL</a
+				>
             </p>
-            <p>
+            <!-- <p>
                 <a href="https://yelp-camp-pmmjlzfmcv.now.sh"
                     >Yelp Camp - Built from a Colt Steele Tutorial with
                     additional features with Node and JavaScript deployed on Now
                     and Database hosted on mLab!</a
                 >
+            </p> -->
+            <p>
+                <a href="https://t.me/the_word_dico_bot"
+					>A Telegram Bot and Discord (762171236787814432 - test-api#5931) - Word Assistant and Welcome Assistant</a
+				>
             </p>
             <!-- <p>
                 <a href="https://t.me/the_word_dico_bot"
