📦 NEW: update cv cover letter

--- a/cover-letter.html
+++ b/cover-letter.html
@@ -10,21 +10,21 @@
         <p>
             Hello,
 
-            I have been worked as a Developer Educator from the beginner of my web development career due to my passion to pass knowledge and explain difficult to grasp content to people just starting web development. I have trained more than 50 developers privately and on part time basis.
+            I have worked as a Developer Educator from the beginner of my web development career due to my passion to pass knowledge and explain difficult to grasp content to people just starting web development. I have trained more than 50 developers privately and on part time basis.
         </p>
         <p>
 
-            My love for JavaScript has guided all my past and present teaching to revolve around the Web and the power of Reactjs and GraphQL. I have created several graphQL servers using Apollo Server and the clients have been consumed using Apollo Client which gives me a good understand of what this company is building and how my role will be very crucial in increasing the conversation around Apollo products via Education.
+            My love for JavaScript has guided all my past and present teaching to revolve around the Web and the power of Reactjs and GraphQL. I have created several graphQL servers using Apollo Server and the clients have been consumed using Apollo Client which gives me a good understanding of what this company is building and how my role will be very crucial in increasing the conversation around Apollo products via Education.
         </p>
 
         <p>
-            My past and present colleagues know of how passionate I am about GraphQL and how much I believe is the future of API creation. One of the recent implement of an Apollo product in a project I am currently working on is my  implementation of the Apollo REST Data source for contentful API and Wgerde API (https://gist.github.com/Oluwasetemi/05dbcd9999212271b300a1b9e316e65f). I cannot wait to dive in Apollo Client v3, I' ve used the previous version and all this says is how much I follow the company and use its product. I watch Kurt and Trevor stream ( cannot resist an opportunity to be mentored by them) regularly on twitch especially the Monday and Thursday streams. My focus as a Nigerian developer has been around knowing companies that use GraphQL in production here and getting developers to know the power within GraphQL. My community will be so much an opportunity for Apollo to leverage on seeing we have the number and you enthusiast with passion to build products.
+            My past and present colleagues know too much how passionate I am about GraphQL and how much I believe it is the future of API creation. One of the recent implementation of an Apollo product in a project was to implement the Apollo REST Data source for contentful API and Wgerde API (https://gist.github.com/Oluwasetemi/05dbcd9999212271b300a1b9e316e65f). I cannot wait to dive in Apollo Client v3, I' ve used the previous version and all this says is how much I follow the company and use its product. I watch Kurt and Trevor stream ( cannot resist an opportunity to be mentored by them) regularly on twitch especially the Monday and Thursday streams. My focus as a Nigerian developer has been around knowing companies that use GraphQL in production here and getting developers to know the power within GraphQL. My community will be so much an opportunity for Apollo to leverage on seeing we have the number and enthusiasm with passion to build products.
 
         </p>
 
         <p>
 
-            My github profiles shows a lot of Repos I have used to organize workshops on Nodejs, JavaScript and React and GraphQL and Jamstack and some of my community works. I can show you the profile of student I have trained in the past for verification. I have good work ethic with remote experience and the timezone with not be a problem if I am considered for this great opportunity to do what I love best - helping developers to get started with Web related technologies.
+            My github profiles shows a lot of Repos I have used to organize workshops on Nodejs, JavaScript and React and GraphQL and Jamstack and some of my community works. I can show you the profile of student I have trained in the past for verification. I have good work ethic with remote experience and the timezone will not be a problem if I am considered for this great opportunity to do what I love best - helping developers to get started with Web related technologies.
         </p>
 
         <p>
