🐛 FIX: clean up cv

--- a/cover-letter.html
+++ b/cover-letter.html
@@ -24,7 +24,7 @@
 
         <p>
 
-            My github profiles shows a lot of Repos I have used to organize workshops on Nodejs, JavaScript and React and GraphQL and Jamstack and some of my community works. I can show you the profile of student I have trained in the past for verification. I have good work ethic with remote experience and the timezone will not be a problem if I am considered for this great opportunity to do what I love best - helping developers to get started with Web related technologies.
+            My github profiles shows a lot of Repositories I have used to organize workshops on Nodejs, JavaScript and React and GraphQL and JAMstack and some of my community works. I can show you the profile of student I have trained in the past for verification. I have good work ethic with remote experience and the timezone will not be a problem if I am considered for this great opportunity to do what I love best - helping developers to get started with Web related technologies.
         </p>
 
         <p>
