📦 NEW: new draft sample of cover-letters

--- a/cover-letter.html
+++ b/cover-letter.html
@@ -24,12 +24,12 @@
 
         <p>
 
-            My github profiles shows a lot of Repositories I have used to organize workshops on Nodejs, JavaScript and React and GraphQL and JAMstack and some of my community works. I can show you the profile of student I have trained in the past for verification. I have good work ethic with remote experience and the timezone will not be a problem if I am considered for this great opportunity to do what I love best - helping developers to get started with Web related technologies.
+            My github profile(https://github.com/oluwasetemi) shows a lot of Repositories I have used to organize workshops on Nodejs, JavaScript, React, GraphQL, JAMstack and some of my community works. URL proof to show the testimonies of student I have trained in the past can be sent in for verification. I have good work ethic with remote experience and the timezone will not be a problem if I am considered for this great opportunity to do what I love best - helping developers to get started with Web related technologies majorly React and GraphQL.
         </p>
 
         <p>
 
-            However this Job application turns out I will be happy to hear the honestly feedback from people working in this great organization that has helped shaped the world with awesome developer's tool and products. So much thank you and Love to you all.
+            However this Job application turns out I will be happy to hear the honest feedback from people working in this great organization that has helped shaped the world with awesome developer's tool and products. So much thank you and Love to you all.
         </p>
         </p>
     </div>
