--- a/index.html
+++ b/index.html
@@ -301,6 +301,9 @@
         <a href="https://oluwasetemi.dev/"
           >Personal Blog and Website - A React project based on GatsbyJS
         </a>
+        <a href="https://slick-slices.oluwasetemi.dev/"
+          >A React project using GatsbyJS, Serverless, JAMstack, Headless CMS, GraphQL
+        </a>
       </p>
     </div>
 
