🐛 FIX: meta content

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- <meta property="og:description" content="A ambitious 👨‍💻JavaScript Developer🔥 with a strong technical background, self-discipline and good work ethic. My love for teaching JavaScript is unconditional.💖"> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1" />
 
     <!-- Generated from https://metatags.io -->
     <!-- Primary Meta Tags -->
@@ -12,16 +11,16 @@
     <meta name="title" content="Ojo Oluwasetemi's CV" />
     <meta
       name="description"
-      content="A bright, talented and ambitious JavaScript developer with a strong technical background with self-discipline and good work ethic. Possess a deep love for teaching JavaScript.👨‍💻"
+      content="A Fullstack JavaScript(Node and React) developer with good technical background, with more than 4 years+ worth experience , self-discipline and good work ethic. Possess a deep love for Teaching👨‍🏫 and Public Speaking🗣️. Have passion to work with cutting edge web technologies like React and GraphQL to build software products that are tested using JEST or Mocha by a Test Driven Development approach with continuous integration pipelines using Agile methodologies. Have worked with Nodejs, React, Gatsbyjs and Nextjs in production environment consistently. I can write Python and C# conveniently."
     />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://cv-oluwasetemi.netlify.com/" />
+    <meta property="og:url" content="https://cv.oluwasetemi.dev/" />
     <meta property="og:title" content="Ojo Oluwasetemi's CV" />
     <meta
       property="og:description"
-      content="A bright, talented and ambitious JavaScript developer with a strong technical background with self-discipline and good work ethic. Possess a deep love for teaching JavaScript.👨‍💻"
+      content="A Fullstack JavaScript(Node and React) developer with good technical background, with more than 4 years+ worth experience , self-discipline and good work ethic. Possess a deep love for Teaching👨‍🏫 and Public Speaking🗣️. Have passion to work with cutting edge web technologies like React and GraphQL to build software products that are tested using JEST or Mocha by a Test Driven Development approach with continuous integration pipelines using Agile methodologies. Have worked with Nodejs, React, Gatsbyjs and Nextjs in production environment consistently. I can write Python and C# conveniently."
     />
     <meta
       property="og:image"
@@ -32,19 +31,19 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://cv-oluwasetemi.netlify.com/"
+      content="https://cv.oluwasetemi.dev/"
     />
     <meta property="twitter:title" content="Ojo Oluwasetemi's CV" />
     <meta
       property="twitter:description"
-      content="A bright, talented and ambitious JavaScript developer with a strong technical background with self-discipline and good work ethic. Possess a deep love for teaching JavaScript.👨‍💻"
+      content="A Fullstack JavaScript(Node and React) developer with good technical background, with more than 4 years+ worth experience , self-discipline and good work ethic. Possess a deep love for Teaching👨‍🏫 and Public Speaking🗣️. Have passion to work with cutting edge web technologies like React and GraphQL to build software products that are tested using JEST or Mocha by a Test Driven Development approach with continuous integration pipelines using Agile methodologies. Have worked with Nodejs, React, Gatsbyjs and Nextjs in production environment consistently. I can write Python and C# conveniently."
     />
     <meta
       property="twitter:image"
       content="https://avatars0.githubusercontent.com/u/10030028?v=3"
     />
 
-    <!-- <link rel="dns-prefetch" href="https://avatars0.githubusercontent.com"> -->
+    <link rel="dns-prefetch" href="https://avatars0.githubusercontent.com">
     <link
       rel="shortcut icon"
       href="https://avatars0.githubusercontent.com/u/10030028?s=40&v=4"
@@ -106,7 +105,7 @@
       <h3>Personal Information</h3>
       <p>
         A Fullstack JavaScript(Node and React) developer with good technical
-        background, with more than
+        background, with
         <a href="https://github.com/Oluwasetemi">4 years+ worth experience</a>
         , self-discipline and good work ethic. Possess a deep love for
         Teaching👨‍🏫 and Public Speaking🗣️. Have passion to work with cutting edge
@@ -115,7 +114,7 @@
         <b>Test Driven Development</b> approach with continuous integration
         pipelines using <b>Agile methodologies</b>. Have worked with
         <b>Nodejs</b>, <b>React</b>, <b>Gatsbyjs</b> and <b>Nextjs</b> in
-        production environment consistently. I can write <b>Python</b> and
+        production environment consistently. I write <b>Python</b> and
         <b>C#</b> conveniently.
       </p>
       <p>
