--- a/cover-letter-backend.html
+++ b/cover-letter-backend.html
@@ -9,7 +9,7 @@
     <div>
       <p>
         Hello, This letter is to express my interest in your posting for the
-        role of a Software Engineer. With a Bachelor’s degree in Computer
+        role of a Backend Engineer. With a Bachelor’s degree in Computer
         Science, hands-on experience using JavaScript and Nodejs to create
         software applications. Much more with constant learning and self
         development accompanied by curiosity with passion to built software
@@ -19,11 +19,11 @@
         EcmaScript iteration, to its latest and tracking of new features.
       </p>
       <p>
-        I enjoy being challenged and engaged with the prospect to see a software
-        development lifecycle to a product with quality architecture using
+        I enjoy being challenged and engaged with the prospect of seeing a software
+        development lifecycle through to a product with quality architecture using
         adequate design principles and agile methodology using technologies like
-        graphQL or RESTful api and microservice architecture for Backend
-        JavaScript, using React, Nextjs, HTML, PUG, CSS to creating visually
+        graphQL or RESTful api or microservice architecture on the backend
+        using JavaScript, React, Nextjs, HTML, PUG, CSS to creating visually
         appealing user interface for products that connect people to business
         and becoming a world class developer is the core of my vision which I
         believe will be of value to your organization and her global partners.
@@ -41,7 +41,7 @@
         <li>Thorough understanding of Nodejs api and its design patterns.</li>
         <li>
           Knowledge of back-end development best practices and front-end
-          development with good Dev-op experience with Digital Ocean and AWS.
+          development with good Dev-op and cloud infrastructure experience with Digital Ocean and AWS.
         </li>
         <li>
           Had core Teacher, Trainer and Love to mentor and onboard developers.
