--- a/index.html
+++ b/index.html
@@ -167,16 +167,17 @@
 				<article>
 					Built
 					<a href="https://virtual-closets.com">Virtual Closet</a>.
-					The technologies used were Nodejs(GraphQL), Reactjs(Nextjs).
-					Hosted on Netlify and AWS.Worked on the API that powers the
-					mobile app and Admin dashboard with another developer. Use
-					Stripe for Payment.
+					The technologies used were Nodejs(GraphQL), Reactjs(Nextjs),
+					React Native(mobile). Hosted on Netlify and AWS.Worked on
+					the API that powers the mobile app and Admin dashboard with
+					another developer. Used Stripe for Payment.
 				</article>
 				<article>
 					When I am not consulting with clients, I train and mentor
 					developers till they get their first software development
 					job and gather enough experience till they are learnt in the
-					art of making web based software products.
+					art of making web based software products. I have trained
+					over 50 developer till date.
 				</article>
 				<h4>
 					Data Savvy Inc, 11263 Lake Mandarin Cir E, Jacksonville, FL
@@ -184,7 +185,7 @@
 					Developer.
 				</h4>
 				<article>
-					Working on a product named BigTop on a part time basis. The
+					Worked on a product named BigTop on a part time basis. The
 					Timezone is Eastern Timezone (GMT-4). I work 80 hrs
 					averagely in a month.(Backend and Frontend)
 				</article>
