--- a/index.html
+++ b/index.html
@@ -338,8 +338,7 @@
 				Technology 2010 - 2015.
 			</p>
 			<h5>
-				Have taken some Professional Courses to be come a better Software
-				Developer.
+				Have taken some Professional Courses.
 			</h5>
 			<!-- <p>Full Stack JavaScript – Freecodecamp</p> -->
 			<!-- <p>Web developer Course by Colt Steele on Udemy</p> -->
@@ -401,6 +400,10 @@
 						<p class="front-end_item">
 							Gatsbyjs
 							<!-- -<progress value="30" max="100">Nextjs</progress> -->
+						</p>
+						<p class="front-end_item">
+							JAMstack technologies
+							<!-- -<progress value="70" max="100">JavaScript</progress> -->
 						</p>
 					</div>
 				</div>
