--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 							<!-- -<progress value="30" max="100">Nextjs</progress> -->
 						</p>
 						<p class="front-end_item">
-							JAMstack technologies
+							JAMstack
 							<!-- -<progress value="70" max="100">JavaScript</progress> -->
 						</p>
 					</div>
