--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<div class="personal-summary">
 			<h3>Personal Information</h3>
 			<p>
-				A Fullstack JavaScript(Node and React) developer with good
+				A Fullstack JavaScript/TypeScript(Node and React) engineer with good
 				technical background, with
 				<a href="https://oluwasetemi.dev/portfolio">4 years+ worth experience</a>
 				, self-discipline and good work ethic. Possess a deep love for
@@ -87,7 +87,7 @@
 				integration pipelines using <b>Agile methodologies</b>. Have
 				worked with <b>Nodejs</b>, <b>React</b>, <b>Gatsbyjs</b> and
 				<b>Nextjs</b> in production environment consistently. I write
-				<b>Python</b> and <b>C#</b> conveniently.
+				<b>Python</b> conveniently.
 			</p>
 			<!-- <p>
 				I am a co-organizer of the FreeCodeCamp Ibadan Community
@@ -327,6 +327,12 @@
 						</path>
 					</svg>
 				</a>
+				For more projects <a href="https://oluwasetemi.dev/portfolio">visit my portfolio</a><svg
+					xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16">
+					<path fill-rule="evenodd"
+						d="M2 1.75C2 .784 2.784 0 3.75 0h5.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v8.586A1.75 1.75 0 0112.25 15h-7a.75.75 0 010-1.5h7a.25.25 0 00.25-.25V6H9.75A1.75 1.75 0 018 4.25V1.5H3.75a.25.25 0 00-.25.25V4.5a.75.75 0 01-1.5 0V1.75zm7.5-.188V4.25c0 .138.112.25.25.25h2.688a.252.252 0 00-.011-.013L9.513 1.573a.248.248 0 00-.013-.011zm-8 10.675a2.25 2.25 0 012.262-2.25L4 9.99v1.938c0 .218.26.331.42.183l2.883-2.677a.25.25 0 000-.366L4.42 6.39a.25.25 0 00-.42.183V8.49l-.23-.001A3.75 3.75 0 000 12.238v1.012a.75.75 0 001.5 0v-1.013z">
+					</path>
+				</svg>
 			</p>
 		</div>
 
