--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
 		<div class="personal-summary">
 			<h3>Personal Information</h3>
 			<p>
-				A Fullstack JavaScript/TypeScript(Node and React) engineer with good
-				technical background, with
-				<a href="https://oluwasetemi.dev/portfolio">4 years+ worth experience</a>
-				, self-discipline and good work ethic. Possess a deep love for
-				Building software products. Have worked with cutting edge web
+				A Fullstack JavaScript/TypeScript(Node and React) engineer with good technical background, with
+				<a href="https://oluwasetemi.dev/portfolio">4 years+ worth of experience</a>
+				, self-discipline and a good work ethic. Possess a deep love for
+				building software products. Have worked with cutting edge web
 				technologies like <b>React</b> and <b>GraphQL</b> to build
 				software products that are tested using <b>JEST or Mocha</b> by
 				a <b>Test Driven Development</b> approach with continuous
