--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
 			<h3>Personal Information</h3>
 			<p>
 				A Fullstack JavaScript/TypeScript(Node and React) engineer with good technical background, with
-				<a href="https://oluwasetemi.dev/portfolio">4 years+ worth of experience</a>
-				, self-discipline and a good work ethic. Possess a deep love for
-				building software products. Have worked with cutting edge web
+				<a href="https://oluwasetemi.dev/portfolio">4 years+ worth of experience</a> working at small to mid sized
+				startups. I am driven by my love for
+				building software products and have good leadership experience leading engineering teams. Have worked with
+				cutting edge web
 				technologies like <b>React</b> and <b>GraphQL</b> to build
 				software products that are tested using <b>JEST or Mocha</b> by
-				a <b>Test Driven Development</b> approach with continuous
-				integration pipelines using <b>Agile methodologies</b>. Have
-				worked with <b>Nodejs</b>, <b>React</b>, <b>Gatsbyjs</b> and
+				a <b>Test Driven Development</b> approach using <b>Agile methodologies</b>. Have
+				worked with <b>TypeScript</b>, <b>Nodejs</b>, <b>React</b>, <b>Gatsbyjs</b> and
 				<b>Nextjs</b> in production environment consistently. I write
 				<b>Python</b> conveniently.
 			</p>
