📦 NEW: initial commit

--- a/index.html
+++ b/index.html
@@ -32,49 +32,58 @@
 
 		<link rel="dns-prefetch" href="https://avatars0.githubusercontent.com" />
 		<link rel="shortcut icon" href="https://avatars0.githubusercontent.com/u/10030028?s=40&v=4" type="image/x-icon" />
-		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i|Lora:700" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Josefin%20Sans:wght@100..700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Lora:wght@100..700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="flex.css" />
 		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="dist/output.css" />
 	</head>
 
-	<body>
+	<body
+		class="selection:bg-purple selection:text-black-700 h-fit px-[30px] pt-[30px] border-[20px] border-purple border-solid w-auto font-thin min-w-full leading-normal font-sans">
 		<h2 class="name">
-			OJO, <span class="other-names">Oluwasetemi Stephen</span>
+			OJO, <span class="italic whitespace-nowrap">Oluwasetemi Stephen</span>
 		</h2>
 
-		<div class="info">
+		<div class="text-right italic p-3 leading-[.2em] -mt-3 font-sans font-light">
 			<!-- <p class="address">
                 BQ HBLK 074, Opposite Estate Unit, UCH Quarters, UCH, Ibadan,
                 Oyo State.
             </p> -->
-			<p class="country">Nationality: Nigerian.</p>
+			<p class="h-3 -mt-2">Nationality: Nigerian.</p>
 			<!-- <p class="dob">Date of birth: 12th of February, 1993.</p> -->
-			<p class="info-contact">
+			<p class="w-auto my-2">
 				<span class="tel">📞 +234 (8051) - 906 – 829,</span>
 				<span class="mobile">📱 +234 (7036) - 520 – 266,</span>
 				<span class="email">📩 setemiojo@gmail.com</span>
 			</p>
-			<p>
+			<p class="my-4 pt-1">
 				<span class="codepen">
-					<svg id="codepen-box" viewBox="0 0 100 100" width="100%" height="100%">
+					<svg class="inline-block w-5 h-5 relative bottom-[3px]" id="codepen-box" viewBox="0 0 100 100" width="100%"
+						height="100%">
 						<path
 							d="M100 34.2c-.4-2.6-3.3-4-5.3-5.3-3.6-2.4-7.1-4.7-10.7-7.1-8.5-5.7-17.1-11.4-25.6-17.1-2-1.3-4-2.7-6-4-1.4-1-3.3-1-4.8 0-5.7 3.8-11.5 7.7-17.2 11.5L5.2 29C3 30.4.1 31.8 0 34.8c-.1 3.3 0 6.7 0 10v16c0 2.9-.6 6.3 2.1 8.1 6.4 4.4 12.9 8.6 19.4 12.9 8 5.3 16 10.7 24 16 2.2 1.5 4.4 3.1 7.1 1.3 2.3-1.5 4.5-3 6.8-4.5 8.9-5.9 17.8-11.9 26.7-17.8l9.9-6.6c.6-.4 1.3-.8 1.9-1.3 1.4-1 2-2.4 2-4.1V37.3c.1-1.1.2-2.1.1-3.1 0-.1 0 .2 0 0zM54.3 12.3L88 34.8 73 44.9 54.3 32.4V12.3zm-8.6 0v20L27.1 44.8 12 34.8l33.7-22.5zM8.6 42.8L19.3 50 8.6 57.2V42.8zm37.1 44.9L12 65.2l15-10.1 18.6 12.5v20.1zM50 60.2L34.8 50 50 39.8 65.2 50 50 60.2zm4.3 27.5v-20l18.6-12.5 15 10.1-33.6 22.4zm37.1-30.5L80.7 50l10.8-7.2-.1 14.4z">
 						</path>
 					</svg>
-					<a href="https://codepen.io/setemiojo">setemiojo</a>
+					<a class="no-underline" href="https://codepen.io/setemiojo">setemiojo</a>
 				</span>
 				<span class="github">
-					<img src="https://github.com/fluidicon.png" alt="github logo" />
-					<a href="https://github.com/Oluwasetemi">Oluwasetemi</a>
+					<img class="inline-block w-5 h-5 relative bottom-[3px]" src="https://github.com/fluidicon.png"
+						alt="github logo" />
+					<a class="no-underline" href="https://github.com/Oluwasetemi">Oluwasetemi</a>
 				</span>
 				<span class="linked-in">
-					<img src="https://static.licdn.com/sc/h/1bt1uwq5akv756knzdj4l6cdc" alt="linkedin Logo" />
-					<a href="https://www.linkedin.com/in/setemiojo">Ojo Oluwasetemi</a>
+					<img class="inline-block w-5 h-5 relative bottom-[3px]"
+						src="https://static.licdn.com/sc/h/1bt1uwq5akv756knzdj4l6cdc" alt="linkedin Logo" />
+					<a class="no-underline" href="https://www.linkedin.com/in/setemiojo">Ojo Oluwasetemi</a>
 				</span>
 				<span class="website">
 					<?xml version="1.0" encoding="iso-8859-1"?>
-					<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-						x="0px" y="0px" width="471.461px" height="471.461px" viewBox="0 0 471.461 471.461"
+					<svg class="inline-block w-5 h-5 relative bottom-[3px]" version="1.1" id="Capa_1"
+						xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+						width="471.461px" height="471.461px" viewBox="0 0 471.461 471.461"
 						style="enable-background:new 0 0 471.461 471.461;" xml:space="preserve">
 						<g>
 							<path d="M235.735,471.456c129.984,0,235.726-105.752,235.726-235.726c0-129.973-105.752-235.725-235.726-235.725
@@ -135,7 +144,7 @@
 						<g>
 						</g>
 					</svg>
-					<a href="https://oluwasetemi.dev">https://oluwasetemi.dev</a>
+					<a class="no-underline" href="https://oluwasetemi.dev">https://oluwasetemi.dev</a>
 				</span>
 			</p>
 		</div>
