🐛 FIX: remove country

--- a/index.html
+++ b/index.html
@@ -179,8 +179,33 @@
 				<h3>Work Experience</h3>
 				<div class="each-experience">
 					<h4>
+						<a href="https://www.fitnessfairng.com/">TalentQL(https://fluna.co)</a> – (January, 2022
+						– Present) – Remote Full Stack Engineer.
+					</h4>
+					<article>
+						<p>
+							I work with AWS (some of the services include Amplify, cloud formation templates, lambda, cloud front, app
+							sync,
+							dynamodb, Aurora, API gateway), building backend APIs and database architecture.
+						</p>
+					</article>
+					<article>
+						<p>
+							Work with ReactJS, TypeScript, JavaScript , NodeJS and GraphQL on the frontend.
+						</p>
+					</article>
+					<!-- <article>
+						When I am not consulting with clients, I train and mentor
+						developers till they get their first software development
+						job and gather enough experience till they are learnt in the
+						art of making web based software products. I have mentored
+						over 50 developer till date.
+					</article> -->
+				</div>
+				<div class="each-experience">
+					<h4>
 						<a href="https://www.fitnessfairng.com/">FITNESS FAIR</a> – (January, 2020
-						– Present) – Remote JavaScript Developer.
+						– December, 2021) – Remote JavaScript Developer.
 					</h4>
 					<article>
 						Building products for client based on requirements.
@@ -197,13 +222,6 @@
 						React Native(mobile). Hosted on Netlify and AWS.Worked on
 						the API that powers the mobile app and Admin dashboard. Used Stripe for Payment.
 					</article>
-					<article>
-						When I am not consulting with clients, I train and mentor
-						developers till they get their first software development
-						job and gather enough experience till they are learnt in the
-						art of making web based software products. I have mentored
-						over 50 developer till date.
-					</article>
 				</div>
 				<div class="each-experience">
 					<h4>
@@ -211,11 +229,11 @@
 						32223. – (August, 2020 – November, 2020) – JavaScript
 						Developer.
 					</h4>
-					<article>
+					<!-- <article>
 						Worked on a product named BigTop on a part time basis. The
 						Timezone is Eastern Timezone (GMT-4). I work 80 hrs
 						averagely in a month.(Backend and Frontend)
-					</article>
+					</article> -->
 					<h4>
 						<a href="http://oluwasetemi.dev/portfolio/">NATTERBASE </a> – 10 Hughes
 						Ave, Alagomeji-Yaba 100001, Lagos. – (January, 2019 – April,
