--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 			<p class="country">Nationality: Nigerian.</p>
 			<!-- <p class="dob">Date of birth: 12th of February, 1993.</p> -->
 			<p class="info-contact">
-				<span class="tel">📞 +234 (8051) - 906 – 829,</span>
-				<span class="mobile">📱 +234 (7036) - 520 – 266,</span>
-				<span class="email">📩 setemiojo@gmail.com</span>
+				<a href="tel:+18765924904"><span class="tel">📞 +1 (8765) - 924 – 904,</span></a>
+				<!-- <span class="mobile">📱 +234 (7036) - 520 – 266,</span> -->
+				<a href="mailto:setemiojo@gmail.com"><span class="email">📩 setemiojo@gmail.com</span></a>
 			</p>
 			<p>
 				<span class="codepen">
@@ -433,9 +433,9 @@
 				B Tech (Hons) Computer Science - Ladoke Akintola University of
 				Technology 2010 - 2015.
 			</p>
-			<h5>
+			<!-- <h5>
 				Have taken some Professional Courses.
-			</h5>
+			</h5> -->
 			<!-- <p>Full Stack JavaScript – Freecodecamp</p> -->
 			<!-- <p>Web developer Course by Colt Steele on Udemy</p> -->
 			<!-- <p>
